--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Future <span>by YuRu</span></a></div>
+				<div class="logo"><a href="#"><font color="#FFFFFF">Future <span><font color="#FFFFFF">by YuRu</span></a></div>
 			</header>
 
 		<!-- Main -->
