--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#"><font color="#FFFFFF">Future <span><font color="#FFFFFF">by YuRu</span></a></div>
+				<div class="logo"><a href="#"><font color="#000000"><font face="AR DECODE">No Pain No Gain </font><span>
 			</header>
 
 		<!-- Main -->
@@ -29,67 +29,33 @@
 							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<header class="special">
-							<h2>Fringilla Fermentum Tellus</h2>
-							<p>vehicula urna sed justo bibendum</p>
-						</header>
+							<h2><font face="微軟正黑體">就學經驗</h2></font>
 						<div class="content">
-							<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel. Vestibulum et efficitur urna. Duis velit nulla, interdum sed felis sit amet, facilisis auctor nunc. Cras luctus urna at risus feugiat scelerisque nec sed diam. </p>
-							<p>Nunc fringilla metus odio, at rutrum augue tristique vel. Nulla ac tellus a neque ullamcorper porta a vitae ipsum. Morbi est sapien, hendrerit quis mi in, aliquam bibendum orci. Vestibulum imperdiet nibh vitae maximus posuere. Aenean sit amet nibh feugiat, condimentum tellus eu, malesuada nunc. Mauris ac pulvinar turpis, sit amet pharetra est. Ut bibendum justo condimentum, vehicula ex vel, venenatis libero. Etiam vehicula urna sed justo bibendum, ac lacinia nunc pulvinar. Integer nec velit orci. Vestibulum pellentesque varius dapibus. Morbi ullamcorper augue est, sed luctus orci fermentum dictum. Nunc tincidunt, nisl consequat convallis viverra, metus nisl ultricies dui, vitae dapibus ligula urna sit amet nibh. Duis ut venenatis enim.</p>
+							<p><font color="black"><font face="微軟正黑體">從國小、國中的求學過程中，促使我對電腦產生極大的興趣，因而選擇了「資料處理科」，高一剛起步時光飛逝，馬上面臨高中的第一次段考，沒想到成績優異不負眾望，激起了我對課業的熱忱，我並不吝嗇分享我所吸收的智慧，同學之間不會的東西會積極教導。此外，升上高中後發現自己對財務方面也頗有興趣，三年內考取了許多證照及證書，證照部分：電腦軟體應用丙級、電腦網頁設計丙級、會計事務—人工記帳丙級、電腦軟體應用乙級；證書部分：MTA、BAP、PVQC、TQC，而學業也在考取證照的時候同時兼顧，以成績繁星推上國立高雄科大。</font></p>
 						</div>
 					</section>
 
 				<!-- Two -->
-					<section id="two" class="wrapper style2">
-						<header>
-							<h2>Vestibulum Convallis</h2>
-							<p>vehicula urna sed justo bibendum</p>
-						</header>
-						<div class="content">
-							<div class="gallery">
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic03.jpg"><img src="images/pic03.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic01.jpg"><img src="images/pic01.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic04.jpg"><img src="images/pic04.jpg" alt="" /></a>
-									</div>
-								</div>
-								<div>
-									<div class="image fit flush">
-										<a href="images/pic05.jpg"><img src="images/pic05.jpg" alt="" /></a>
-									</div>
-								</div>
-							</div>
-						</div>
-					</section>
-
-				<!-- Three -->
+		
 					<section id="three" class="wrapper">
 						<div class="spotlight">
 							<div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
 							<div class="inner">
-								<h3>Viverra Hendrerit</h3>
+								<h3><font face="微軟正黑體">需要什麼技能</h3></font>
 								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
 							</div>
 						</div>
 						<div class="spotlight alt">
 							<div class="image flush"><img src="images/pic07.jpg" alt="" /></div>
 							<div  class="inner">
-								<h3>Curabitur Eget</h3>
+								<h3><font face="微軟正黑體">需要修什麼課</h3></font>
 								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
 							</div>
 						</div>
 						<div class="spotlight">
 							<div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
 							<div class="inner">
-								<h3>Morbi Eleifend</h3>
+								<h3><font face="微軟正黑體">修課內容</h3></font>
 								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
 							</div>
 						</div>
@@ -97,6 +63,14 @@
 
 				</div>
 			</section>
+			<!-- Three -->
+			<section id="two" class="wrapper style2">
+						<header>
+							<h2><font face="微軟正黑體">未來想做什麼行業</h2></font>
+						<div class="content">
+							<div class="gallery">
+							
+					</section>
 
 		<!-- Footer -->
 			<footer id="footer">
