--- a/index.html
+++ b/index.html
@@ -36,41 +36,48 @@
 					</section>
 
 				<!-- Two -->
-		
+							<section id="two" class="wrapper style2">
+						<header>
+							<h2><font face="微軟正黑體">未來想做什麼行業</h2></font>
+							<p><font color="white"><font face="微軟正黑體">「財務分析人員」</p></font>
+							<p><font color="white"><font face="微軟正黑體">閱讀產業資料及財務報表，分析及預測公司各種財務指標，並提供公司財務建議</p></font>
+						    <p><font color="white"><font face="微軟正黑體">1. 蒐集外部產業資料，分析產業的經濟狀況</p></font>
+							<p><font color="white"><font face="微軟正黑體">2. 閱讀公司的財務報表分析公司的價值</p></font>
+							<p><font color="white"><font face="微軟正黑體">3. 分析企業的商品物價、銷售、成本、支出和稅率與該企業獲利能力的關係</p></font>
+							<p><font color="white"><font face="微軟正黑體">4. 分析經營者的管理能力，負責預算編審與控管並提供各種融資、投資、合併、收購等財務策略之建議及分析</p></font>
+							<p><font color="white"><font face="微軟正黑體">5. 幫助客戶進行投資決策</p></font>
+							<p><font color="white"><font face="微軟正黑體">6. 推動與執行各項專案，並督導各部門專案執行進度</p></font>
+						<div class="content">
+							<div class="gallery">
+					</section>
+					<!-- Three -->
 					<section id="three" class="wrapper">
 						<div class="spotlight">
 							<div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
 							<div class="inner">
 								<h3><font face="微軟正黑體">需要什麼技能</h3></font>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<p><font color="black"><font face="微軟正黑體">銀行業務與財富管理規劃諮詢服務<br>金融市場分析與資料蒐集<br>財務策略建議與分析<br>具備數字概念，擅長數據分析<br>統計軟體操作與運用<br>具備金融專業知識與分析<br>財務規劃與投資管理<br>客戶問題的解決及解答<br>市場情報蒐集及分析能力</p></font>
 							</div>
 						</div>
 						<div class="spotlight alt">
 							<div class="image flush"><img src="images/pic07.jpg" alt="" /></div>
 							<div  class="inner">
 								<h3><font face="微軟正黑體">需要修什麼課</h3></font>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<p><font face="微軟正黑體">財務管理<br>財務報表分析<br>會計學<br>經濟學<br>統計學<br>投資學<br></p></font>
 							</div>
 						</div>
 						<div class="spotlight">
-							<div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
+							<div class="image flush"><img src="images/pic08.jpg" alt="" /><br><img src="images/pic10.jpg" alt="" /><br><img src="images/pic11.jpg" alt="" /><br><img src="images/pic12.jpg" alt="" /></div>
 							<div class="inner">
 								<h3><font face="微軟正黑體">修課內容</h3></font>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<p><font face="微軟正黑體">「財務管理」<br>財務管理學是研究如何通過計劃、決策、控制、考核、監督等管理活動對資金運動進行管理，以提高資金效益的一門經營管理學科。它是以經濟學原理和經濟管理理論為指導，結合組織生產力和處理生產關係的有關問題，對企業和國民經濟各部門財務管理工作進行科學總結而形成的知識體系。<br><p>「財務分析報表」<br><class="image flush"><img src="images/pic09.jpg" alt="" /><br><br>「會計學」<br>研究財務活動和成本資料的收集、分類、綜合、分析和解釋的基礎上形成協助決策的信息系統，以有效地管理經濟的一門應用學科，可以說它是社會學科的組成部分，也是一門重要的管理學科。會計學的研究對象是資金的運動。<br>經濟學注重的是研究經濟行為者在一個經濟體系下的行為，以及他們彼此之間的互動。在現代，經濟學的教材通常將這門領域的研究分為總體經濟學和個體經濟學。個體經濟學檢視一個社會裡基本層次的行為，包括個體的行為者（例如個人、公司、買家或賣家）以及與市場的互動。而總體經濟學則分析整個經濟體和其議題，包括失業、通貨膨脹、經濟成長、財政和貨幣政策等。<br><br>「統計學」<br>統計學是應用數學的一個分支，主要通過利用概率論建立數學模型，收集所觀察系統的數據，進行量化的分析、總結，併進而進行推斷和預測，為相關決策提供依據和參考。它被廣泛的應用在各門學科之上，從物理和社會科學到人文科學，甚至被用來工商業及政府的情報決策之上。<br><br>「投資學」<br>投資學研究如何把個人、機構的有限資源分配到諸如股票、國債、不動產等（金融）資產上，以獲得合理的現金流量和風險-收益特徵。其核心內容就是以效用最大化準則為指導，獲得個人財富配置的最優均衡解。</p></font>
 							</div>
 						</div>
 					</section>
 
 				</div>
 			</section>
-			<!-- Three -->
-			<section id="two" class="wrapper style2">
-						<header>
-							<h2><font face="微軟正黑體">未來想做什麼行業</h2></font>
-						<div class="content">
-							<div class="gallery">
-							
-					</section>
+			
 
 		<!-- Footer -->
 			<footer id="footer">
